--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 .idea/**/shelf
 .idea/.gitignore
 .idea/compiler.xml
-.idea/encodings.xml
+.idea/encodings.xmlx
 .idea/jarRepositories.xml
 .idea/misc.xml
 .idea/modules.xml
