--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -114,6 +114,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<to>
+						<image>harshandev/${project.artifactId}:v1</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
