--- a/docker-compose/default/common-config.yml
+++ b/docker-compose/default/common-config.yml
@@ -9,9 +9,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 350m
-    environment:
-      SPRING_RABBITMQ_HOST: "rabbit"
+          memory: 700m
 
   microservice-configserver-config:
     extends:
@@ -19,3 +17,9 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+
+  microservice-eureka-config:
+    extends:
+      service: microservice-configserver-config
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
