Gateway server implemented with other services.

--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -51,3 +51,9 @@ info:
     name: "cards"
     description: "Bank Cards Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      harshan:
+        cards: DEBUG
