--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -52,3 +52,9 @@ info:
     name: "loans"
     description: "Bank Loans Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      harshan:
+        loans: DEBUG
