--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -11,7 +11,13 @@ spring:
           lowerCaseServiceId: true
     httpclient:
       connect-timeout: 1000
-      response-timeout: 2s
+      response-timeout: 10s
+
+    security:
+      oauth2:
+        resourceserver:
+          jwt:
+            jwk-set-uri: "http://localhost:8086/realms/master/protocol/openid-connect/certs"
 
 management:
   endpoints:
